--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-dictionary.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-dictionary.tpl.html
@@ -31,7 +31,7 @@
                     </div>
                 </fieldset>
             </form>
-            <fieldset>
+            <fieldset ng-if="pb.currentEntity.dictionaryValues.length > 0">
                 <legend>Current values</legend>
                 <div class="table-wrapper">
                     <table class="table">
