--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-detail.tpl.html
@@ -10,9 +10,9 @@
                </div>
                 <div class="form-group">
                     <label class="form-label" for="">Display name</label>
-                    <div class="form-input" ng-repeat="data in blade.origEntity.catalog.languages">
+                    <div class="form-input __langs" ng-repeat="data in blade.origEntity.catalog.languages">
+                        <span class="flag flag-{{data.languageCode.substr(3).toLowerCase()}}"></span>
                         <input ng-model="nothing.to.bind" class="form-control" />
-                        <span class="form-hint">{{data.displayName}}</span>
                     </div>
                 </div>
             </form>
