--- a/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-setting-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-setting-detail.tpl.html
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     <label class="form-label">Type</label>
                     <div class="form-input">
-                        <select ng-model="blade.currentEntity.valueType" ng-options="x for x in types" required></select>
+                        <select va-chosen ng-model="blade.currentEntity.valueType" ng-options="x for x in types" required></select>
                     </div>
                 </div>
                 <div class="form-group">
