--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/shipment-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/shipment-detail.tpl.html
@@ -6,24 +6,24 @@
                     <div class="form-group">
                         <label class="form-label">Shipment number</label>
                         <div class="form-input">
-                            <input required type="text" ng-model="blade.operation.number">
+                            <input required type="text" ng-model="blade.currentEntity.number">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="form-label">Status</label>
                         <div class="form-input">
-                            <select ng-model="blade.operation.status" class="chosen-select">
-                                <option value="new">New</option>
-                                <option value="new">PickPack</option>
-                                <option value="new">Completed</option>
+                            <select ng-model="blade.currentEntity.status" class="chosen-select">
+                                <option>New</option>
+                                <option>PickPack</option>
+                                <option>Completed</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="form-label">Fulfillment</label>
                         <div class="form-input">
-                            <select ng-model="blade.operation.fulfillmentCenterId" class="chosen-select">
-                                <option>{{blade.operation.fulfillmentCenterId}}</option>
+                            <select ng-model="blade.currentEntity.fulfillmentCenterId" class="chosen-select" ng-options="center.id as center.name for center in fulfillmentCenters">
+                                <option value="">{{blade.currentEntity.fulfillmentCenterId}}</option>
                             </select>
                         </div>
                     </div>
@@ -32,18 +32,17 @@
                     <div class="form-group">
                         <label class="form-label">from</label>
                         <div class="form-input">
-                            <div class="form-text">{{blade.operation.createdDate | date:'short'}}</div>
+                            <div class="form-text">{{blade.currentEntity.createdDate | date:'short'}}</div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="form-label">Employee</label>
                         <div class="form-input">
-                            <select ng-model="blade.operation.employeeId" class="chosen-select">
-                                <option>{{blade.operation.employeeId}}</option>
+                            <select ng-model="blade.currentEntity.employeeId" class="chosen-select">
                             </select>
                         </div>
                     </div>
-                 </div>
+                </div>
             </div>
             <div class="tile-group four">
                 <va-widget-container group="shipmentDetailWidgets" blade="blade"></va-widget-container>
