--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/operation-detail-toolbar.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/operation-detail-toolbar.tpl.html
@@ -2,7 +2,7 @@
     <span class="switch-t">Approved</span>
     <div class="form-control __switch">
         <label class="form-label">
-            <input type="checkbox" ng-model="currentEntity.isApproved" />
+            <input type="checkbox" ng-model="blade.currentEntity.isApproved" />
             <span class="switch"></span>
         </label>
     </div>
